WP Movie Ratings changelog:
===========================

2006-08-
- lots of CSS fixes to make the plugin compatible with more Wordpress themes.
- plugin options now feature additional descriptions explaining what each option means.
- basic statistics included in page mode.
- added error message when rating a movie using bookmarklet without being logged in.

2006-07-14
- you can now edit and delete your movie ratings.
- added option to customize the dialogue title for movie ratings box via Wordpress options panel.
- added option to display movie ratings using 5 stars instead of 10.
- ability to set custom date the film was watched on (instead of assuming the current date) and display movie ratings based on this date instead of id.
- new statistic: average movie rating for all rated movies.
- fixed SQL errors when there are no movies rated.
- fixed hardcoded wordpress table names which could have resulted in errors during installation and usage (no longer, hopefully).
- fixed plugin activation problems on Windows machines.
- magic quotes/strip slashes fixes.
- added separate page listing all movies (just create a new wordpress page and add this tag there: [[wp_movie_ratings_page]]).
- release 1.2.

2006-06-27
- sidebar mode, where movie ratings are on a separate line, so the box can be as thin as 170px for star ratings (images) and 100px for text ratings.
- renamed HTTPRequest class to WP_HTTP_Request to avoid conflicts with other HTTPRequest classes from other plugins.
- new options panel which lets you set different display options (like the aforementioned sidebar mode).
- option to display movie ratings using just text as an alternative to the images with stars.
- fixed CSS problems with Internet Explorer (now works properly even with IE 5.0).
- css inclusion moved to <head> so that the generated pages that include the output from this plugin can now be XHTML compliant.
- removed nested SQL queries so that the plugin now works with older versions of MySQL.